Fixing horizontal scroll

--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -23,7 +23,7 @@
 .experience-banner-wrapper .letter-p  { top: 25%; left: 26%; width: 8.5%; }
 .experience-banner-wrapper .letter-e2 { top: 24%; left: 35%; width: 8.5%; }
 .experience-banner-wrapper .letter-r  { top: 25%; left: 44%; width: 8.5%; }
-.experience-banner-wrapper .letter-i  { top: 26%; left: 53%; width: 6.5%; }
+.experience-banner-wrapper .letter-i  { top: 26%; left: 53%; width: 8.5%; }
 .experience-banner-wrapper .letter-e3 { top: 25%; left: 60%; width: 8.5%; }
 .experience-banner-wrapper .letter-n  { top: 25%; left: 69%; width: 8.5%; }
 .experience-banner-wrapper .letter-c  { top: 25%; left: 78%; width: 8%; }
